<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailDiaryFragment">

    <TextView
        android:id="@+id/diary_detail_emotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="😀"
        android:textSize="60dp"
        />

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/diary_detail_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/diary_detail_emotion"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/diary_write_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/diary_detail_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/diary_write_title_desc"
            android:textAlignment="textStart"
            android:textSize="24sp"
            tools:ignore="RtlCompat"
            android:autofillHints=""
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/diary_detail_date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/diary_detail_title_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/diary_write_date"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <TextView
            android:id="@+id/diary_detail_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/diary_write_date"
            android:textAlignment="textStart"
            android:textSize="24sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/diary_detail_content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/diary_detail_date_container"
        app:layout_constraintBottom_toTopOf="@id/edit_button"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/diary_write_content"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="24sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/diary_detail_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/diary_write_content_desc"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textSize="24sp"
            tools:ignore="RtlCompat"/>
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toTopOf="@id/close_button"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        />

    <android.widget.Button
        android:id="@+id/close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>